plugins {
    id "java-library"
    id "net.neoforged.moddev" version "2.0.141"
    id "idea"
    id "com.diffplug.spotless" version "8.0.0"
    id "me.modmuss50.mod-publish-plugin" version "1.0.0"
}

group = "me.ramidzkh"
version = System.getenv("APPBOT_VERSION") ?: "0.0.0"

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users in 1.21.10, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()
        }

        server {
            server()
            programArgument "--nogui"
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file("run-data")

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll "--mod", project.mod_id, "--all", "--output", file("src/generated/resources/").getAbsolutePath(), "--existing", file("src/main/resources/").getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty "forge.logging.markers", "REGISTRIES"

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

repositories {
    maven {
        url = "https://maven.blamejared.com"
    }

    exclusiveContent {
        forRepository {
            maven {
                url = "https://maven.theillusivec4.top/"
            }
        }

        filter {
            includeGroup "top.theillusivec4.curios"
        }
    }

    exclusiveContent {
        forRepository {
            maven {
                url = "https://maven.terraformersmc.com/"
            }
        }

        filter {
            includeGroup "dev.emi"
        }
    }

    exclusiveContent {
        forRepository {
            maven {
                url = "https://cursemaven.com/"
            }
        }

        filter {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    implementation("org.appliedenergistics:appliedenergistics2:${ae2_version}")
    implementation("vazkii.botania:botania-neoforge-${minecraft_version}:${botania_version}")

    compileOnly("mezz.jei:jei-${project.minecraft_version}-neoforge:${project.jei_version}")
    compileOnly("dev.emi:emi-neoforge:${emi_version}")

    // dev: choose dev runtime xei mod(s)
    def xei = ["emi"]

    if (xei.remove("jei")) {
        runtimeOnly("mezz.jei:jei-${project.minecraft_version}-neoforge:${project.jei_version}")
        runtimeOnly("curse.maven:ae2-jei-integration-1074338:${jei_ae2_integration_id}")
    }

    if (xei.remove("emi")) {
        runtimeOnly("dev.emi:emi-neoforge:${emi_version}")
    }

    if (!xei.isEmpty()) {
        throw new GradleException("Unknown xei mods: $xei")
    }

    runtimeOnly("curse.maven:jade-324717:${jade_id}")
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir "src/generated/resources" }

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_version            : project.version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8" // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

/////////////
// Spotless
spotless {
    java {
        target("src/main/java/**/*.java")

        endWithNewline()
        leadingTabsToSpaces()
        removeUnusedImports()
        toggleOffOn()
        eclipse().configFile(file("codeformat/codeformat.xml"))
        importOrderFile(file("codeformat/ae2.importorder"))
    }

    format("json") {
        target("src/main/resources/**/*.json")
        prettier().config(parser: "json")
    }
}

////////////////
// mod-publish-plugin
publishMods {
    displayName = project.version
    changelog = "View changelog at [the release page](https://github.com/ramidzkh/Applied-Botanics/releases/tag/$project.version)"

    if (project.version.contains("alpha")) {
        type = ALPHA
    } else if (project.version.contains("beta")) {
        type = BETA
    } else {
        type = STABLE
    }

    file = jar.archiveFile
    modLoaders.add("neoforge")

    curseforge {
        accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
        projectId = "610632"
        minecraftVersions.add(minecraft_version)
        requires("applied-energistics-2")
        requires("botania")
    }

    modrinth {
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        projectId = "545hUrw9"
        minecraftVersions.add(minecraft_version)
        requires("ae2")
        requires("botania")
    }
}
